kubernetes/apps/gitlab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    toolkit.fluxcd.io/tenant: dev-team
