kubernetes/apps/gitlab/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-tailscale
  namespace: gitlab
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: gitlab
      port:
        number: 80
  tls:
    - hosts:
        - gitlab
